fixed alignment in header section 1

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,21 @@ nav a {
 
 .headerSection1 {
   display: inline-block;
+  width: 100%;
+  background-color: red;
+}
+
+input{
+  width: 700px;
+  height: 50px;
+}
+
+.npm-logo{
+  size: 30px;
 }
 
 .headerSection2 {
-  /* display: inline-block; */
+  display: inline-block;
   width: 300px;
   margin: 0 auto;
 }
@@ -41,6 +52,6 @@ nav a {
 .city {
   display: inline-block;
   float: right;
-  width:100%;
+  width:1200px;
 }
 
